# Ai-orchestrator-riserva

./: .gitignore  FORENSIC_RUNTIME_REPORT.md  README.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  debug-deps.yml  generate_key.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/models/: manifest.json
docs/: AGENT_SYSTEM.md  ANDROID_BUILD.md  ARCHITECTURE_LOCK.md  ARCHITECTURE_STATUS.md  CRITICAL_RUNTIME_RECOVERY_REPORT.md  GUIDA_IT.md  LOCAL_RUNTIME_ANDROID.md  MODULAR_ARCHITECTURE.md  OFFLINE_RUNTIME.md  RISERVA_SEPARATION_AUDIT.md  ROADMAP_EVOLUTIVA.md  RUNTIME_AUDIT_REPORT.md  TROUBLESHOOTING.md  UPDATE_SYSTEM.md  runtime_asset_forensics.md  runtime_selftest_report.md
lib/: injection_container.dart  main.dart
lib/app/: app_shell.dart  runtime_bootstrap.dart  splash_screen.dart  startup_transition_controller.dart
lib/config/app/: app_constants.dart
lib/core/: core.dart
lib/core/agents/: README.md  agent.dart  agent_lifecycle.dart  agent_message.dart  base_agent.dart  event_router.dart  knowledge_agent.dart  message_bus.dart  orchestrator_agent.dart  reasoning_agent.dart  runtime_agent.dart  shared_context.dart  task_dispatcher.dart  tool_agent.dart
lib/core/ai/: model_manager.dart
lib/core/ai/entities/: ai_model.dart  ai_request.dart  ai_response.dart
lib/core/ai/providers/: ai_repository.dart  local_ai_repository.dart
lib/core/app_health/: app_health_initializer.dart
lib/core/app_legal/: app_legal_initializer.dart
lib/core/database/: database_helper.dart
lib/core/download/: background_download_service.dart  download_integrity_verifier.dart  download_session_manager.dart
lib/core/embedding/: embedding_cache_service.dart  embedding_runtime.dart  embedding_service.dart  embedding_state.dart  semantic_search_service.dart  vector_store_service.dart
lib/core/error/: exceptions.dart  failures.dart
lib/core/filesystem/: filesystem_paths.dart  model_path_resolver.dart  runtime_storage_layout.dart
lib/core/memory/: context_window_manager.dart  memory_provider.dart
lib/core/orchestrator/: execution_engine.dart  intent_analyzer.dart  multi_agent_orchestrator.dart  orchestration_strategy.dart  orchestrator.dart  role_contracts.dart  task_type.dart
lib/core/planner/: plan.dart  planner_service.dart
lib/core/plugins/: README.md  plugin.dart  plugin_registry.dart
lib/core/runtime/: ai_runtime_settings.dart  app_localizations.dart  chat_ui_preferences_service.dart  cloud_agent_runtime.dart  hybrid_agent_runtime.dart  language_service.dart  llm_role_assignment_service.dart  local_agent_runtime.dart  runtime_provider.dart
lib/core/services/: cache_manager.dart
lib/core/storage/: runtime_model_path_resolver.dart
lib/core/sync/: sync.dart  sync_manager.dart
lib/core/tokenizer/: tokenizer_runtime.dart  tokenizer_service.dart  tokenizer_state.dart  tokenizer_validator.dart
lib/core/tools/: README.md  code_interpreter_tool.dart  tool.dart  web_search_tool.dart
lib/core/usecases/: usecase.dart
lib/core/voice/: audio_stream_player.dart  sherpa_onnx_voice_engine.dart  voice_engine.dart  voice_input_service.dart  voice_loop_manager.dart  voice_model_downloader.dart  voice_output_service.dart  voice_text_normalizer.dart
lib/features/: features.dart
lib/features/automation/: README.md
lib/features/chat/: chat.dart
lib/features/chat_memory/: conversation_memory_service.dart  memory_window_manager.dart  rolling_context_builder.dart
lib/features/cloud_ai/: cloud_ai.dart
lib/features/code_context/: code_chunker.dart  context_retrieval_service.dart
lib/features/coding_assistant/: coding_assistant_agent_impl.dart  in_memory_shared_context.dart  sequential_planning_strategy.dart
lib/features/document_intelligence/: offline_document_intelligence_plugin.dart
lib/features/local_ai/: local_ai.dart
lib/features/multimodal/: multimodal.dart
lib/features/onboarding/: onboarding.dart
lib/features/project_memory/: workspace_project_memory_service.dart
lib/features/projects/: projects.dart
lib/features/semantic_index/: project_indexer.dart  semantic_workspace_index.dart  workspace_embedding_service.dart
lib/features/settings/: settings.dart
lib/features/voice/: sherpa_onnx_adapter.dart  voice.dart
lib/features/workflows/: README.md
lib/features/workspace/: agent_task_router.dart  file_tree_service.dart  workspace_manager.dart
lib/native/: native.dart
lib/native/platform/: android_intent_handler.dart  bixby_handler.dart
lib/native/runtime/: README.md  execution_engine_factory.dart  local_runtime_provider_factory.dart
macos/Flutter/: Flutter-Release.xcconfig
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig  Warnings.xcconfig
models/: README.md  manifest.json
native/: README.md
native/android/: CMakeLists.txt  README.md  llama_bridge.cpp  llama_bridge.h  mlc_jni_bridge.cpp
native/llama_cpp/: README.md
native/macos/: README.md
native/windows/: README.md
presentation/chat/controllers/: runtime_state_controller.dart
scripts/: README.md  generate_build_readme_it.py
templates/: README.md
test/app/: runtime_bootstrap_test.dart
test/core/planner/: intent_analyzer_test.dart  plan_test.dart  planner_service_test.dart
test/core/runtime/: ai_runtime_settings_test.dart
test/core/sync/: crdt_document_test.dart  hlc_test.dart  sync_manager_test.dart
test/core/tools/: code_interpreter_tool_test.dart  web_search_tool_test.dart
test/features/ai_code/: orchestrator_phase1_test.dart
test/features/chat_memory/: chat_turn_normalizer_test.dart  memory_window_manager_test.dart  rolling_context_builder_test.dart
test/features/coding_assistant/: coding_assistant_agent_test.dart
update/: version.json
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  resource.h  utils.cpp  win32_window.cpp  win32_window.h
(+275 files in other folders)
